# CDFEG

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  课程大纲.md  项目任务.md  项目说明.md
.claude/: index.json
.claude/rules/: pyTool能力边界.md  核心库实现细节.md
.claude/skills/derive-element/: SKILL.md
.claude/skills/generate-sample/: SKILL.md
.claude/skills/macs-to-cdfeg/: SKILL.md
.superpowers/sdd/: task-11-report.md
FEMproject/: CDFEG.sln  CMakeLists.txt  SIFEG.sln  build.bat  程序说明.md
FEMproject/CDFEG/: CDFEG.vcxproj  CDFEG.vcxproj.filters  CLAUDE.md  CMakeLists.txt  EleSubBase.cpp  ElementBase.cpp  ElementBase.h  EquationSystem.cpp  FemData.cpp  FemData.h  GaussEleBase.cpp  GaussEleBase.h  GidPrePost2.cpp  GidPrePost2.h  GidResItem.cpp  GidResItem.h  InpDataStructures.h  IsoEleBase.cpp  IsoEleBase.h  MatrixFun.cpp  MatrixFun.h  PhyFieldData.cpp  PhyFieldData.h  Processor.cpp  Processor.h  TextReader.cpp  TextReader.h  cpp.hint  gidPrePost.cpp  gidPrePost.h  gidProPost.cpp  gidProPost.h  inpReader.cpp  inpReader.h  vtkCellType.h  vtkPost.cpp  vtkPost.h  代码解释.md  升级说明.md
FEMproject/SIFEG/: EleSubBase.cpp  EquationSystem.cpp  FemData.cpp  GidPrePost2.h  IsoEleBase.cpp  PhyFieldData.cpp  PhyFieldData.h  Processor.cpp  SIFEG.vcxproj  SIFEG.vcxproj.filters  TextReader.cpp  TextReader.h  cpp.hint  gidProPost.cpp  gidProPost.h
FEMproject/el2d.gid/: el2d.bas  el2d.bat  el2d.cnd  el2d.prb
FEMproject/include/CDFEG/: CDFEG.h  EleSubBase.h  EquationSystem.h  FemData.h  GaussEleBase.h  GidPrePost2.h  InpDataStructures.h  IsoEleBase.h  MatrixFun.h  PhyFieldData.h  Processor.h  SIFEG.h  TextReader.h  gidPrePost.h  gidProPost.h  inpReader.h  vtkPost.h
FEMproject/include/SIFEG/: EleSubBase.h  EquationSystem.h  FemData.h  IsoEleBase.h  PhyFieldData.h
FEMproject/sample/: CLAUDE.md
FEMproject/sample/DEl2D/: CMakeLists.txt  DelDispFieldData.cpp  DelDispFieldData.h  DelQ4g.cpp  DelQ4g.h  NewmarkData.cpp  NewmarkData.h  NewmarkDispFieldData.cpp  NewmarkDispFieldData.h  NewmarkQ4g.cpp  NewmarkQ4g.h  del2d.post.msh  del2d.post.res  del2dData.cpp  del2dData.h  main.cpp  升级说明.md
FEMproject/sample/El2D/: CMakeLists.txt  ElDispFieldData.cpp  ElDispFieldData.h  ElQ4.cpp  ElQ4.h  ElQ4g.cpp  ElQ4g.h  ElT3.cpp  ElT3.h  ElT3g.cpp  ElT3g.h  Elastic2DData.cpp  Elastic2DDispFieldData.cpp  a1eq4g2.cpp  a1eq4g2.h  a2ll2.cpp  a2ll2.h  aFieldData.cpp  aFieldData.h  data.json  del.pde  elData.cpp  elData.h  elMain.cpp  main.cpp
FEMproject/sample/El2D/el.gid/: el.bas  el.cnd  el.prb
FEMproject/sample/El2D/gid/: Elastic2D.prb
FEMproject/sample/El2D0/: CMakeLists.txt  ElDispFieldData.cpp  ElDispFieldData.h  StressBL2g.cpp  StressBL2g.h  elData.cpp  elData.h  elMain.cpp
FEMproject/sample/ElT3/: CMakeLists.txt  ElT3.cpp  ElT3.h  Elastic2DDispFieldData.cpp  Elastic2DDispFieldData.h  ElasticT3Data.cpp  ElasticT3Data.h  data.json  main.cpp
FEMproject/sample/ElT3/ElasticT3.gid/: ElasticT3.bas  ElasticT3.cnd  ElasticT3.prb
FEMproject/sample/ElT3/gid/ElasticT3.gid/: ElasticT3.bat  ElasticT3.prb
FEMproject/sample/el3d/: CMakeLists.txt  a1ec8g2.cpp  a1ec8g2.h  a2ew4g2.cpp  a2ew4g2.h  a3lq4.cpp  a3lq4.h  aFieldData.cpp  aFieldData.h  el3dData.cpp  el3dData.h  el3dMain.cpp
FEMproject/sample/truss1D/: CMakeLists.txt  Truss1D.cpp  Truss1DDispFieldData.cpp  main.cpp
FEMproject/sample/truss2D/: CMakeLists.txt  Truss2D.cpp  Truss2D.h  Truss2D.vcxproj  Truss2D.vcxproj.filters  Truss2DData.cpp  Truss2DData.h  Truss2DDispFieldData.cpp  Truss2DDispFieldData.h  main.cpp
FEMproject/sample/truss3D/: CMakeLists.txt  Truss3D.cpp  Truss3D.h  Truss3DData.cpp  Truss3DData.h  Truss3DDispFieldData.cpp  Truss3DDispFieldData.h  main.cpp
FEMproject/testGetCoef/: CMakeLists.txt  testGetCoef.cpp
FEMproject/testPreParam/: CMakeLists.txt  testPreParam.cpp
FEMproject/truss1D/: Truss1D.cpp  Truss1D.h  Truss1D.vcxproj  Truss1DData.cpp  Truss1DData.h  Truss1DDispFieldData.cpp  Truss1DDispFieldData.h  main.cpp
SIFEG/: EleSub.cpp  FemData.h  GidPrePost2.cpp  IsoEleBase.h  MatrixFun.cpp  MatrixFun.h  PhyFieldData.cpp  Processor.h  SIFEG.h  SIFEG.vcxproj  SIFEG.vcxproj.filters  gidProPost.cpp  inpReader.cpp  inpReader.h  vtkPost.cpp  vtkPost.h
docs/superpowers/plans/: 2026-06-19-额外参数前处理机制.md  2026-06-22-macs迁移cdfeg-skill.md
docs/superpowers/specs/: 2026-06-19-额外参数前处理机制-design.md  2026-06-22-macs迁移cdfeg-skill-design.md
macs/El/: CMakeLists.txt  data.json
macs/El/el/: CMakeLists.txt  a1eq4g2.cpp  a1eq4g2.h  a2ll2.cpp  a2ll2.h  beq4g2.cpp  beq4g2.h  elData.cpp  elaFieldData.cpp  elaFieldData.h  elbFieldData.cpp  elbFieldData.h  main.cpp
macs/El/el.gid/: el.bas  el.bat  el.cnd  el.prb
macs/El/testData/: el.post.msh  el.post.res  el_fv100.post.msh
pyTool/: CLAUDE.md  DataEleSub.py  DataEleSubG.py  DataField.py  DataProject.py  DataSch.py  MakerBase.py  MakerCpp.py  MakerGidFile.py  preParser.py  vtkCellType.py  提示词.md
pyTool/fepgParser/: __init__.py  fepgParser.py  gcnParser.py  gesParser.py  preParser.py
pyTool/template/: cmake.j2  cmakeSln.j2  elesub.cpp.j2  elesub.h.j2  femdata.cpp.j2  femdata.h.j2  gidbas.j2  gidbat.j2  gidcnd.j2  gidprb.j2  imp.cmd.j2  main.cpp.j2  mainGid.cpp.j2  mfelprb.j2  pack_templates.py  phyfielddata.cpp.j2  phyfielddata.h.j2  templates.db  vcxproj.filters.j2  vcxproj.j2
pyTool/test/: Test1DTimoshenkobeam.py  test1DEulerBeam.py  test1DTruss.py  test2DTruss.py  testDEL2D.py  testEl2D.py  testElT3.py  testMacs.py  test_preParser.py
pyTool/test/truss1D/: CMakeLists.txt  Truss1D.cpp  Truss1D.h  Truss1D.vcxproj  Truss1D.vcxproj.filters  Truss1DData.cpp  Truss1DDispFieldData.cpp  Truss1DDispFieldData.h  main.cpp
sample/El2D/: ElQ4.cpp  ElQ4.h  ElT3.cpp  ElT3.h  Elastic2DData.h  data.json  main.cpp
sample/El2D/gid/: Elastic2D.bas  Elastic2D.cnd
